Rearrange component folder tree structure

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-asset": "~10.0.10",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
@@ -42,6 +43,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-document-picker": "^8.2.1",
     "react-native-file-picker": "^0.0.21",
     "react-native-floating-label-input": "^1.4.3",
@@ -53,8 +55,7 @@
     "react-native-screens": "3.31.1",
     "react-native-switch-toggles": "^1.0.1",
     "react-native-web": "~0.19.10",
-    "toggle-switch-react-native": "^3.3.0",
-    "expo-asset": "~10.0.10"
+    "toggle-switch-react-native": "^3.3.0"
   },
   "resolutions": {
     "@types/react": "17.0.24"
