--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "@expo-google-fonts/figtree": "^0.2.3",
     "@expo-google-fonts/readex-pro": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-segmented-control/segmented-control": "^2.5.5",
     "@react-native-vector-icons/material-icons": "^0.0.1-alpha.25",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -45,12 +46,14 @@
     "react-native": "0.74.5",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-document-picker": "^8.2.1",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-file-picker": "^0.0.21",
     "react-native-floating-label-input": "^1.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-logs": "^5.1.0",
     "react-native-otp-entry": "^1.7.3",
     "react-native-qrcode-svg": "^6.3.2",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-switch-toggles": "^1.0.1",
