--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -56,6 +56,7 @@
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-switch-toggles": "^1.0.1",
     "react-native-web": "~0.19.10",
     "toggle-switch-react-native": "^3.3.0"
@@ -68,9 +69,11 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "metro-react-native-babel-preset": "^0.77.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "~5.3.3"
