--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -56,6 +56,7 @@
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-shadow-2": "^7.1.1",
     "react-native-svg": "15.2.0",
     "react-native-switch-toggles": "^1.0.1",
     "react-native-web": "~0.19.10",
