--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -52,6 +52,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-logs": "^5.1.0",
     "react-native-otp-entry": "^1.7.3",
+    "react-native-progress": "^5.0.1",
     "react-native-qrcode-svg": "^6.3.2",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "4.10.5",
@@ -74,6 +75,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "metro-react-native-babel-preset": "^0.77.0",
+    "react-native-fast-shadow": "^0.1.1",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.3.2",
