--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "@expo-google-fonts/figtree": "^0.2.3",
     "@expo-google-fonts/readex-pro": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-segmented-control/segmented-control": "^2.5.5",
     "@react-native-vector-icons/material-icons": "^0.0.1-alpha.25",
     "@react-navigation/native": "^6.1.18",
@@ -41,15 +42,18 @@
     "expo-web-browser": "~13.0.3",
     "jsqr": "^1.4.0",
     "nativewind": "^2.0.11",
+    "paths-js": "^0.4.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-bouncy-checkbox": "^4.1.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^8.2.1",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-file-picker": "^0.0.21",
     "react-native-floating-label-input": "^1.4.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-logs": "^5.1.0",
     "react-native-otp-entry": "^1.7.3",
     "react-native-progress": "^5.0.1",
@@ -58,6 +62,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-shadow-2": "^7.1.1",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "15.2.0",
     "react-native-switch-toggles": "^1.0.1",
     "react-native-web": "~0.19.10",
