Add seller dashboard & projects

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -56,6 +56,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-logs": "^5.1.0",
     "react-native-otp-entry": "^1.7.3",
+    "react-native-pie-chart": "^3.0.2",
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-svg": "^6.3.2",
     "react-native-radio-buttons-group": "^3.1.0",
@@ -63,6 +64,7 @@
     "react-native-screens": "3.31.1",
     "react-native-shadow-2": "^7.1.1",
     "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "15.2.0",
     "react-native-switch-toggles": "^1.0.1",
     "react-native-web": "~0.19.10",
