--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,8 @@
     "@react-native-vector-icons/material-icons": "^0.0.1-alpha.25",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@reown/appkit": "^1.5.1",
+    "@reown/appkit-common-react-native": "^1.0.2",
     "@reown/appkit-wagmi-react-native": "^1.0.2",
     "@tanstack/react-query": "^5.61.3",
     "@walletconnect/react-native-compat": "^2.17.2",
