--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -71,6 +71,7 @@
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-svg": "^6.3.2",
     "react-native-radio-buttons-group": "^3.1.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-shadow-2": "^7.1.1",
