--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -79,6 +79,7 @@
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "15.2.0",
     "react-native-switch-toggles": "^1.0.1",
+    "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
     "toggle-switch-react-native": "^3.3.0",
     "viem": "^2.21.50",
