--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "@expo-google-fonts/readex-pro": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-segmented-control/segmented-control": "^2.5.5",
@@ -83,7 +84,8 @@
     "react-native-web": "~0.19.10",
     "toggle-switch-react-native": "^3.3.0",
     "viem": "^2.21.50",
-    "wagmi": "^2.13.0"
+    "wagmi": "^2.13.0",
+    "expo-clipboard": "~6.0.3"
   },
   "resolutions": {
     "@types/react": "17.0.24"
