--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "@expo-google-fonts/figtree": "^0.2.3",
     "@expo-google-fonts/readex-pro": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
@@ -37,6 +38,7 @@
     "expo-asset": "~10.0.10",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.16",
+    "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-document-picker": "~12.0.2",
     "expo-file-system": "~17.0.1",
@@ -49,6 +51,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "graphql": "^15.8.0",
     "jsqr": "^1.4.0",
     "nativewind": "^2.0.11",
     "paths-js": "^0.4.11",
@@ -84,8 +87,7 @@
     "react-native-web": "~0.19.10",
     "toggle-switch-react-native": "^3.3.0",
     "viem": "^2.21.50",
-    "wagmi": "^2.13.0",
-    "expo-clipboard": "~6.0.3"
+    "wagmi": "^2.13.0"
   },
   "resolutions": {
     "@types/react": "17.0.24"
