--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -88,7 +88,8 @@
     "react-native-web": "~0.19.10",
     "toggle-switch-react-native": "^3.3.0",
     "viem": "^2.21.50",
-    "wagmi": "^2.13.0"
+    "wagmi": "^2.13.0",
+    "xlsx": "^0.18.5"
   },
   "resolutions": {
     "@types/react": "17.0.24"
