update: deployed new IDOFactory, adding hardhat and testing, update README

--- a/SmartContract/.gitignore
+++ b/SmartContract/.gitignore
@@ -15,3 +15,22 @@ docs/
 
 # Vscode
 .history
+
+node_modules
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+cache_hardhat
+artifacts
+
+# Depyloments
+## Ucomment if you want to save deployments
+deployments/*
+!deployments/.gitkeep
+
+# IDE
+.idea
