--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,8 @@
     "@expo-google-fonts/figtree": "^0.2.3",
     "@expo-google-fonts/readex-pro": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@openzeppelin/contracts": "^5.1.0",
+    "@openzeppelin/merkle-tree": "^1.0.7",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-native-community/datetimepicker": "^8.2.0",
@@ -34,6 +36,7 @@
     "@tanstack/react-query": "^5.61.3",
     "@walletconnect/react-native-compat": "^2.17.2",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "expo": "~51.0.28",
     "expo-application": "~5.9.1",
     "expo-asset": "~10.0.10",
@@ -52,8 +55,12 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "fs": "^0.0.1-security",
     "graphql": "^15.8.0",
+    "js-sha3": "^0.9.3",
     "jsqr": "^1.4.0",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.4.0",
     "nativewind": "^2.0.11",
     "paths-js": "^0.4.11",
     "react": "18.2.0",
