--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -96,7 +96,8 @@
     "toggle-switch-react-native": "^3.3.0",
     "viem": "^2.21.50",
     "wagmi": "^2.13.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "expo-av": "~14.0.7"
   },
   "resolutions": {
     "@types/react": "17.0.24"
