--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,6 +33,7 @@
     "@reown/appkit": "^1.5.1",
     "@reown/appkit-common-react-native": "^1.0.2",
     "@reown/appkit-wagmi-react-native": "^1.0.2",
+    "@rneui/base": "^4.0.0-rc.8",
     "@tanstack/react-query": "^5.61.3",
     "@walletconnect/react-native-compat": "^2.17.2",
     "axios": "^1.7.7",
@@ -40,6 +41,7 @@
     "expo": "~51.0.28",
     "expo-application": "~5.9.1",
     "expo-asset": "~10.0.10",
+    "expo-av": "~14.0.7",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.16",
     "expo-clipboard": "~6.0.3",
@@ -68,6 +70,7 @@
     "react-native": "0.74.5",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-collapsible": "^1.6.2",
     "react-native-document-picker": "^8.2.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.12.2",
@@ -96,8 +99,7 @@
     "toggle-switch-react-native": "^3.3.0",
     "viem": "^2.21.50",
     "wagmi": "^2.13.0",
-    "xlsx": "^0.18.5",
-    "expo-av": "~14.0.7"
+    "xlsx": "^0.18.5"
   },
   "resolutions": {
     "@types/react": "17.0.24"
