--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,8 @@
     "@expo/vector-icons": "^14.0.2",
     "@openzeppelin/contracts": "^5.1.0",
     "@openzeppelin/merkle-tree": "^1.0.7",
+    "@privy-io/expo": "^0.34.7",
+    "@privy-io/expo-native-extensions": "^0.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-native-community/datetimepicker": "^8.2.0",
@@ -40,6 +42,7 @@
     "expo": "~51.0.28",
     "expo-application": "~5.9.1",
     "expo-asset": "~10.0.10",
+    "expo-av": "~14.0.7",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.16",
     "expo-clipboard": "~6.0.3",
@@ -96,8 +99,7 @@
     "toggle-switch-react-native": "^3.3.0",
     "viem": "^2.21.50",
     "wagmi": "^2.13.0",
-    "xlsx": "^0.18.5",
-    "expo-av": "~14.0.7"
+    "xlsx": "^0.18.5"
   },
   "resolutions": {
     "@types/react": "17.0.24"
