--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -16,7 +16,7 @@ jobs:
         uses: expo/expo-github-action@v8
         with:
           eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
+          token: ${{ vars.EXPO_TOKEN }}
       - name: Install dependencies
         working-directory: ./Frontend
         run: npm ci
