--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -1,6 +1,12 @@
 name: EAS Build
+
 on:
   workflow_dispatch:
+    inputs:
+      release_tag:
+        description: "Release tag to attach the .apk file"
+        required: true
+
 jobs:
   build:
     name: Install, Build, and Upload
@@ -8,18 +14,41 @@ jobs:
     environment: AoiCrypto
     steps:
       - uses: actions/checkout@v4
+      
       - uses: actions/setup-node@v4
         with:
           node-version: 18.x
           cache: npm
+
       - name: Setup Expo and EAS
         uses: expo/expo-github-action@v8
         with:
           eas-version: latest
           token: ${{ vars.EXPO_TOKEN }}
+      
       - name: Install dependencies
         working-directory: ./Frontend
         run: npm ci
+
       - name: Build on EAS
         working-directory: ./Frontend
         run: eas build --profile ci --platform android --non-interactive --wait
+
+      - name: Download build artifact
+        working-directory: ./Frontend
+        run: |
+          BUILD_URL=$(eas build:list --platform android --status finished --limit 1 --json --non-interactive | jq -r '.[0].artifacts.buildUrl')
+          if [ -z "$BUILD_URL" ]; then
+            echo "No finished builds found. Exiting."
+            exit 1
+          fi
+          APK_NAME="AoiCrypto_${{ github.event.inputs.release_tag }}.apk"
+          curl -o "$APK_NAME" "$BUILD_URL"
+
+      - name: Create or Update GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./Frontend/AoiCrypto_${{ github.event.inputs.release_tag }}.apk
+          tag_name: ${{ github.event.inputs.release_tag }}
+          prerelease: false
+          body: "Release built with EAS and attached APK."
