--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -34,21 +34,8 @@ jobs:
         working-directory: ./Frontend
         run: eas build --profile ci --platform android --non-interactive --wait
 
-      - name: Download build artifact
+      - name: Log link build artifact
         working-directory: ./Frontend
         run: |
           BUILD_URL=$(eas build:list --platform android --status finished --limit 1 --json --non-interactive | jq -r '.[0].artifacts.buildUrl')
-          if [ -z "$BUILD_URL" ]; then
-            echo "No finished builds found. Exiting."
-            exit 1
-          fi
-          APK_NAME="AoiCrypto_${{ github.event.inputs.release_tag }}.apk"
-          curl -o "$APK_NAME" "$BUILD_URL"
-
-      - name: Create or Update GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./Frontend/AoiCrypto_${{ github.event.inputs.release_tag }}.apk
-          tag_name: ${{ github.event.inputs.release_tag }}
-          prerelease: false
-          body: "Release built with EAS and attached APK."
+          echo "$BUILD_URL"
